# stroke-order

./: .gitattributes  .gitignore  LICENSE  README.md  REF_ANALYSIS_2018.md  REF_ANALYSIS_5000.md  REF_ANALYSIS_G0V.md  REF_ANALYSIS_MOE.md  REF_ANALYSIS_SCG.md  REF_ANALYSIS_SCG2010.md  apt.txt  pyproject.toml  render.yaml
docs/: DEPLOY_NOW.md  GALLERY_DEPLOYMENT.md  GIT_AUTH_SETUP.md  MULTI_GITHUB_BACKUP.md  PRINCIPLES.md  PROJECT_PLAYBOOK.md  PROJECT_PLAYBOOK_pending_addenda.md  PUBLIC_DEPLOYMENT.md  PUSH_TO_GITHUB.md  QUICK_START.md  RETROSPECTIVE_phase11_12.md  SPINOFFS.md  VISION.md  WORK_LOG_2026-04-26.md  WORK_LOG_2026-04-27.md  WORK_LOG_2026-04-28.md  WORK_LOG_2026-05-01.md  WORK_LOG_2026-05-01_phase11_stamp.md  WORK_LOG_2026-05-01_phase12_wakeup.md  WORK_LOG_2026-05-01_phase12b_industry.md  WORK_LOG_2026-05-02.md  WORK_LOG_2026-05-02_phase12l_12m.md  WORK_LOG_2026-05-02_phase12m_iterative.md  WORK_LOG_2026-05-03.md  WORK_LOG_2026-05-04.md  _config.yml  index.html  index.md  overflow_scan_report.csv
scripts/: analyze_808_components.py  build_808_dataset.py  build_bentu_6792.py  build_educational_4808.py  build_moe_elementary_5021.py  build_wuqian_dataset.py  history_cherry_pick_2026-05-04.py  measure_cns_skeleton_alignment.py  playbook_cherry_pick_2026-05-04.py  prototype_engrave_convex.py  render_fetch_fonts.sh  scan_overflow_bugs.py
tests/: conftest.py  test_align.py  test_auto_cycle_fit.py  test_auto_source.py  test_avatar_initials.mjs  test_avatar_validate.mjs  test_capacity.py  test_chongxi_seal.py  test_classifier.py  test_cns_font.py  test_cns_strokes.py  test_components_algorithm.py  test_components_api.py  test_components_coverset.py  test_components_decompose.py  test_components_ids.py  test_decomposition.py  test_direction.py  test_doodle_auto_crop.py  test_exporters.py  test_g0v_source.py  test_gallery_api.py  test_gallery_avatar.py  test_gallery_core.py  (+49 more)
(+164 files in other folders)
